--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,9 @@
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
->>>>>>> 50cff88f1dbb906d4fe886c2520ddbf5f2054103
-streamlit
-xgboost
-scikit-learn
+streamlit==1.32.2
+xgboost==2.1.4
+scikit-learn==1.6.1
 joblib
 pandas
 numpy
 plotly
 matplotlib
 seaborn
-<<<<<<< HEAD
-=======
-scikit-learn
-streamlit
-pandas
-joblib
-matplotlib
-seaborn
-xgboost
-=======
-streamlit
-xgboost
-scikit-learn
-joblib
-pandas
-numpy
-plotly
-matplotlib
-seaborn
->>>>>>> 0284ac9bc0164c0789e88921d3d49b71517b49b6
->>>>>>> 50cff88f1dbb906d4fe886c2520ddbf5f2054103
-scikit-learn
