--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit
-xgboost
-scikit-learn
-joblib
+streamlit==1.32.2
 pandas
 numpy
-plotly
+joblib
+xgboost==2.1.4
+scikit-learn==1.6.1
 matplotlib
 seaborn
+plotly
